--- a/campus-product-sys/pom.xml
+++ b/campus-product-sys/pom.xml
@@ -22,6 +22,10 @@
     </parent>
     <!--依赖-->
     <dependencies>
+    <dependency>
+    <groupId>org.yaml</groupId>
+    <artifactId>snakeyaml</artifactId>
+</dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
