--- a/campus-product-sys/src/main/resources/application.yml
+++ b/campus-product-sys/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       max-request-size: 10MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/campus-product?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://172.17.0.1:3306/campus-product?useSSL=false&serverTimezone=UTC
     username: root
     password: 123456
 # 让 Mybatis 在 Mapper目录下找到 XML 映射文件
